FF-195 - fixing step indicator when menu collapsed

--- a/Client/Shared/MainLayout/MainLayout.razor.scss
+++ b/Client/Shared/MainLayout/MainLayout.razor.scss
@@ -109,7 +109,6 @@
 
             li.nav-item {
                 transition: width 0.2s ease;
-                overflow: hidden;
                 position: relative;
 
                 .text-label {
